tests/ui/opts/01_no_parens.stderr
error: expected attribute arguments in parentheses: #[funcmap(...)]
 --> tests/ui/opts/01_no_parens.rs:4:1
  |
4 | #[funcmap]
  | ^^^^^^^^^^
