tests/ui/opts/01_no_parens.rs
use funcmap::FuncMap;

#[derive(FuncMap)]
#[funcmap]
struct Test<T>(T);

fn main() {}
